add user_id to list postagens filter
