# backend/docs/swagger.json
@@ -157,7 +157,13 @@
                     },
                     {
                         "type": "string",
-                        "description": "Ordernacao das datas DESC ou ASC",
+                        "description": "ID de um usuario",
+                        "name": "id_usuario",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Ordenação das datas DESC ou ASC",
                         "name": "ordenacao",
                         "in": "query"
                     },
